Fix for: Livelist template element overlap with livelist element in canvas.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1094,7 +1094,6 @@ body.modal-open {
   }
   ul {
     position: relative;
-    width: 100%;
   }
   .app-label {
     overflow: hidden;
